--- a/index.html
+++ b/index.html
@@ -1318,17 +1318,17 @@
         </div>
         <div class="service-card slide-in">
           <div class="service-icon"><i class="fas fa-water"></i></div>
-          <h4>Body Wash (Bike & Car)</h4>
+          <h4>Body Wash </h4>
           <p>Thorough exterior cleaning for a spotless shine on bikes and cars.</p>
         </div>
         <div class="service-card slide-in">
           <div class="service-icon"><i class="fas fa-water"></i></div>
-          <h4>Normal Wash (Bike & Car)</h4>
+          <h4>Normal Wash </h4>
           <p>Standard wash for everyday cleaning needs for bikes and cars.</p>
         </div>
         <div class="service-card slide-in">
           <div class="service-icon"><i class="fas fa-water"></i></div>
-          <h4>Full Wash (Bike & Car)</h4>
+          <h4>Full Wash </h4>
           <p>Comprehensive wash with detailed attention to every surface for bikes and cars.</p>
         </div>
         <div class="service-card slide-in">
@@ -1697,4 +1697,5 @@
     }
   </script>
 </body>
+
 </html>
