--- a/index.html
+++ b/index.html
@@ -1318,17 +1318,17 @@
         </div>
         <div class="service-card slide-in">
           <div class="service-icon"><i class="fas fa-water"></i></div>
-          <h4>Body Wash </h4>
+          <h4>Body Wash (Bike & Car)</h4>
           <p>Thorough exterior cleaning for a spotless shine on bikes and cars.</p>
         </div>
         <div class="service-card slide-in">
           <div class="service-icon"><i class="fas fa-water"></i></div>
-          <h4>Normal Wash </h4>
+          <h4>Normal Wash (Bike & Car)</h4>
           <p>Standard wash for everyday cleaning needs for bikes and cars.</p>
         </div>
         <div class="service-card slide-in">
           <div class="service-icon"><i class="fas fa-water"></i></div>
-          <h4>Full Wash </h4>
+          <h4>Full Wash (Bike & Car)</h4>
           <p>Comprehensive wash with detailed attention to every surface for bikes and cars.</p>
         </div>
         <div class="service-card slide-in">
@@ -1411,6 +1411,7 @@
         </div>
       </div>
     </div>
+    <!-- instagram section -->
   </section>
   <section id="our-work" class="section fade-in-section">
     <div class="container">
@@ -1418,7 +1419,19 @@
         <i class="fab fa-instagram"></i>
         <h3>See Our Work on Instagram</h3>
         <p>Please visit our page to see the latest transformations and our commitment to quality.</p>
-        <a href="https://www.instagram.com/ozon_detailing_/" target="_blank" class="btn">Visit Our Instagram</a>
+        <a href="https://www.instagram.com/ozon_detailing_/" target="_blank" class="btn">Visit Our Instagram page</a>
+      </div>
+    </div>
+  </section>
+  
+  <section id="our-work" class="section fade-in-section">
+    <div class="container">
+      <div class="instagram-cta">
+        <i class="fab fa-facebook"></i>
+       <!-- face book section -->
+        <h3>See Our Work on Facebook</h3>
+        <p>Please visit our page to see the latest transformations and our commitment to quality.</p>
+        <a href="https://www.facebook.com/share/1CCan3fXJc/" target="_blank" class="btn">Visit Our Facebook Page</a>
       </div>
     </div>
   </section>
@@ -1697,6 +1710,6 @@
     }
   </script>
 </body>
-
 </html>
+
 
